--- a/Ajax/Dosya/ErisimIzniVerDers.cshtml
+++ b/Ajax/Dosya/ErisimIzniVerDers.cshtml
@@ -17,41 +17,55 @@
        Response.StatusCode=500;
        Response.End();
      }
-
-     var db=Database.Open("fb1ae");
- 
-     var queryDosya=db.QuerySingle("SELECT * FROM Dosya WHERE DosyaID=@0 AND UserID=@1",DosyaID,WebSecurity.CurrentUserId);
-
-    if (WebSecurity.CurrentUserId!=queryDosya.UserID)
-    {
-        Response.StatusCode=400;
-        Response.End();
-    }
-
+    string[] izinVerilecekDersler = DersID.Split(',');
+    string[] izinVerilecekDosyalar = DosyaID.Split(',');
     
-
-    if (db.QueryValue("SELECT COUNT(*) FROM DosyaIzinDers WHERE DosyaID=@0 AND DersID=@1",DosyaID,DersID)>0)
+    var db=Database.Open("fb1ae");
+ 
+    foreach (var izinVerilecekDosya in izinVerilecekDosyalar)
     {
-        db.Close();
-        Response.Write("zatenvar");
 
-        Response.End();
-    }
-     db.Execute("INSERT INTO DosyaIzinDers(DosyaID,DersID) VALUES(@0,@1)",DosyaID,DersID);
-     db.Execute("INSERT INTO DersDosyalari(DosyaID,DersID) VALUES(@0,@1)",DosyaID,DersID);
+        var queryDosya=db.QuerySingle("SELECT * FROM Dosya WHERE DosyaID=@0 AND UserID=@1",izinVerilecekDosya,WebSecurity.CurrentUserId);
 
-    // Derse dosya eklenmiş olması yeni bir aktivite anlamına geliyor. Yeni bir aktivite oluştur.
-    var queryEklenenDosya=db.QuerySingle("SELECT * FROM Dosya WHERE DosyaID=@0",DosyaID);
-    db.Execute("INSERT INTO Aktivite(UserID,DersID,Renk,Ikon,URL,IlaveMetin,IliskiliOge,EylemID) VALUES(@0,@1,@2,@3,@4,@5,@6,@7)",WebSecurity.CurrentUserId,DersID,"success","fa-file-text-o",Href("~/Dosya/Indir?DosyaID=" + DosyaID),queryEklenenDosya.Aciklama,"drsdsy" + DosyaID.ToString(),1);
+        if (WebSecurity.CurrentUserId!=queryDosya.UserID)
+        {
+            Response.StatusCode=400;
+            Response.End();
+        }
+
+        foreach (var izinVerilecekDers in izinVerilecekDersler)
+        {
+           
+            var queryDers=db.QuerySingle("SELECT * FROM Ders WHERE DersID=@0 AND UserID=@1 AND Silindi=0 AND Arsivlendi=0",izinVerilecekDers,WebSecurity.CurrentUserId);
+
+            if (queryDers==null)
+            {
+                Response.StatusCode=400;
+                Response.End();  
+            }
+
+                if (db.QueryValue("SELECT COUNT(*) FROM DosyaIzinDers WHERE DosyaID=@0 AND DersID=@1",izinVerilecekDosya,izinVerilecekDers)>0)
+                {
+                    db.Close();
+                    Response.Write("zatenvar");
+
+                    Response.End();
+                }
+                 db.Execute("INSERT INTO DosyaIzinDers(DosyaID,DersID) VALUES(@0,@1)",izinVerilecekDosya,izinVerilecekDers);
+                 db.Execute("INSERT INTO DersDosyalari(DosyaID,DersID) VALUES(@0,@1)",izinVerilecekDosya,izinVerilecekDers);
+
+                // Derse dosya eklenmiş olması yeni bir aktivite anlamına geliyor. Yeni bir aktivite oluştur.
+                var queryEklenenDosya=db.QuerySingle("SELECT * FROM Dosya WHERE DosyaID=@0",izinVerilecekDosya);
+                db.Execute("INSERT INTO Aktivite(UserID,DersID,Renk,Ikon,URL,IlaveMetin,IliskiliOge,EylemID) VALUES(@0,@1,@2,@3,@4,@5,@6,@7)",WebSecurity.CurrentUserId,DersID,"success","fa-file-text-o",Href("~/Dosya/Indir?DosyaID=" + izinVerilecekDosya),queryEklenenDosya.Aciklama,"drsdsy" + izinVerilecekDosya.ToString(),1);
    
-    // Yeni bir aktivite oluşturulması dersi takip edenlere yeni bir bildirim oluşturulmasını gerektiriyor. Yeni bir bildirim oluştur.
-    db.Execute("INSERT INTO Bildirim(Url,EylemiYapanUserID,IliskiliOge,EylemID,DersID) VALUES(@0,@1,@2,@3,@4)","~/Ders/?DersID=" + DersID + "&Liste=dosya",WebSecurity.CurrentUserId,"drsdsy" + DosyaID.ToString(),2,DersID);
-    var eklenenBildirimID=db.GetLastInsertId();
+                // Yeni bir aktivite oluşturulması dersi takip edenlere yeni bir bildirim oluşturulmasını gerektiriyor. Yeni bir bildirim oluştur.
+                db.Execute("INSERT INTO Bildirim(Url,EylemiYapanUserID,IliskiliOge,EylemID,DersID) VALUES(@0,@1,@2,@3,@4)","~/Ders/?DersID=" + izinVerilecekDers + "&Liste=dosya",WebSecurity.CurrentUserId,"drsdsy" + izinVerilecekDosya.ToString(),2,izinVerilecekDers);
+                var eklenenBildirimID=db.GetLastInsertId();
 
-    // Bu bildirimi öğrencilerin okuması gerekiyor. 
-    db.Execute("INSERT INTO BildirimOkunmasiGereken(UserID,BildirimID) SELECT UserID,@0 FROM DersTakip WHERE DersID=@1 AND Durum=2",eklenenBildirimID,DersID);
-
-
+                // Bu bildirimi öğrencilerin okuması gerekiyor. 
+                db.Execute("INSERT INTO BildirimOkunmasiGereken(UserID,BildirimID) SELECT UserID,@0 FROM DersTakip WHERE DersID=@1 AND Durum=2",eklenenBildirimID,izinVerilecekDers);
+        }
+    }
 
      db.Close();
      Response.Write("OK");
