--- a/Dosya/Liste.cshtml
+++ b/Dosya/Liste.cshtml
@@ -330,7 +330,7 @@
         <h4 class="modal-title" id="myModalLabel4">Ders Seç</h4> 
       </div>
       <div class="modal-body" style="height:300px;overflow: auto;">
-        <i class="fa fa-spinner fa-spin fa-2x hide" id="spinnerIcon"></i>
+        <i class="fa fa-spinner fa-spin fa-2x hide" id="spinnerIconDers"></i>
         <table class="table table-hover" id="tableVerilenDerslerListesi">
             
          
