--- a/Dosya/Liste.cshtml
+++ b/Dosya/Liste.cshtml
@@ -337,7 +337,7 @@
         </table>
       </div>
       <div class="modal-footer">
-          <button type="button" class="btn btn-primary" id="btnDerstePaylas">@Resources.Resource.lblTamam</button>
+          <button type="button" class="btn btn-primary" id="btnDerstePaylasTamam">@Resources.Resource.lblTamam</button>
         <button type="button" class="btn btn-default" data-dismiss="modal">@Resources.Resource.lblIptal</button>
         
       </div>
