--- a/Odev/Liste.cshtml
+++ b/Odev/Liste.cshtml
@@ -181,6 +181,7 @@
                         
                          <label>@Resources.Resource.lblBaslik</label>
                         <input type="text" id="txtOdevBaslik" class="form-control" name="Baslik">
+                        
                         <label>@Resources.Resource.lblOdevMetni</label>
                         <textarea name="Aciklama" class="form-control" rows="5" id="txtAciklama"></textarea>
                         
@@ -188,7 +189,7 @@
 
             <div class="col-lg-6">
                 <label>@Resources.Resource.lblOdevGonderimi</label>
-                        <select id="cmbOdevGonderimi" class="form-control" name="OdevGonderimi">
+                        <select id="cmbOdevGonderimi" class="form-control" name="OdevGonderimi" id="cmbOdevGonderimi">
                             <option value="1"> @Resources.Resource.lblAcik</option>
                             <option value="2"> @Resources.Resource.lblKapali</option>
                          </select>
