--- a/Panel/DefaultYeni.cshtml
+++ b/Panel/DefaultYeni.cshtml
@@ -97,11 +97,13 @@
 
 <div class="row"> 
     <div class="col-lg-12">                     @if (roller.Contains("Ogretici"))                   {
+
+                        
                        <div class="dropdown">
 
                         
-                                  <button id="dLabel" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="btn btn-primary btn-lg">
-                                    <i class="fa fa-plus"></i>
+                                  <button id="dLabel" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="btn btn-primary btn-lg shiny">
+                                    <i class="fa fa-plus-circle"></i>
                                     <span class="caret"></span>
                                   </button>
 
