--- a/Dosya/Liste.cshtml
+++ b/Dosya/Liste.cshtml
@@ -213,7 +213,7 @@
                                       <li><a href="@Href("~/Dosya/Ayarlar?DosyaID=")@dosya.DosyaID"><i class="fa fa-cog"></i> @Resources.Resource.lblDosyaAyarlari</a></li>
                                       <li><a href="@Href("~/Dosya/Indirenler?DosyaID=")@dosya.DosyaID"><i class="fa fa-arrow-circle-o-down"></i> @Resources.Resource.lblDosyayiYukleyenKullanicilar</a></li>
                                       <li><a href="#" class="btnDersteDosyaPaylas" data-OgeID="d_@dosya.DosyaID" data-toggle="modal" data-target="#modalDersSec"><i class="fa fa-share"></i> Derste Paylaş</a></li>
-                                      <li><a href="#" class="btnOgeSil" data-OgeID="d_@dosya.DosyaID"><i class="fa fa-remove"></i> @Resources.Resource.lblDosyayiSil</a></li>
+                                      <li><a href="javascript:void(0);" class="btnOgeSil" data-OgeID="d_@dosya.DosyaID"><i class="fa fa-remove"></i> @Resources.Resource.lblDosyayiSil</a></li>
                                   </ul>
                             </div>
 
