--- a/Ajax/Dosya/Ekle.cshtml
+++ b/Ajax/Dosya/Ekle.cshtml
@@ -19,6 +19,7 @@
     var dosyaAdi=Request["DosyaAdi"];
     var dosyaTuru=Request["DosyaTuru"];
     var konum=Request["Konum"];
+    var DersID=Request["DersID"];
     if (string.IsNullOrEmpty(aciklama))
     {
         aciklama=dosyaAdi;
