--- a/Panel/Default.cshtml
+++ b/Panel/Default.cshtml
@@ -108,7 +108,7 @@
                                   </button>
 
                      <ul class="dropdown-menu">
-                              <li><a href="#"><i class="fa fa-book"></i> Duyuru Yap</a></li>
+                              <li><a href="#" data-toggle="modal" data-target="#modalDuyuruYap"><i class="fa fa-book"></i> Duyuru Yap</a></li>
                               <li><a href="#" data-toggle="modal" data-target="#modalDosyaEkle"><i class="fa fa-file"></i> Dosya Paylaş</a></li>
                               <li><a href="#" data-toggle="modal" data-target="#modalYeniOdevVer"><i class="fa fa-clock-o"></i> Ödev Ver</a></li>
 
@@ -244,7 +244,7 @@
              <div class="row">
                     <div class="col-lg-6">
                         <label>@Resources.Resource.lblDers</label>
-                        <select name="DersID" id="odevVercmbDersID">
+                        <select name="DersID" id="odevVercmbDersID" class="form-control">
                          @foreach(var ders in queryDerslerim)
                          {
                              <option value="@ders.DersID">@ders.DersAdi</option>
@@ -308,6 +308,41 @@
       </div>
       <div class="modal-footer">
           <button type="button" class="btn btn-primary" id="dosyaPaylasbtnDosyaEkle">@Resources.Resource.lblTamam</button>
+        <button type="button" class="btn btn-default" data-dismiss="modal">@Resources.Resource.lblIptal</button>
+        
+      </div>
+    </div>
+  </div>
+</div><div class="modal" id="modalDuyuruYap" tabindex="-1" role="dialog" aria-labelledby="duyuruYapmyModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="duyuruYapmyModalLabel"> Duyuru Yap</h4>
+      </div>
+      <div class="modal-body">
+     
+             <div class="row">
+                    <div class="col-lg-12">
+                        <label>@Resources.Resource.lblDers</label>
+                        <select name="DersID" id="duyuruYapcmbDersID" class="form-control">
+                         @foreach(var ders in queryDerslerim)
+                         {
+                             <option value="@ders.DersID">@ders.DersAdi</option>
+                         }
+                        </select>
+                       
+                        <label>Duyuru</label>
+                        <textarea name="MesajMetni" class="form-control" rows="8" id="duyuruYapMesajMetni"></textarea>
+                        
+                    </div>
+
+           
+            </div>
+      
+      </div>
+      <div class="modal-footer">
+          <button type="button" class="btn btn-primary" id="duyuruYapbtnOdevVer">@Resources.Resource.lblTamam</button>
         <button type="button" class="btn btn-default" data-dismiss="modal">@Resources.Resource.lblIptal</button>
         
       </div>
