--- a/Panel/Default.cshtml
+++ b/Panel/Default.cshtml
@@ -342,15 +342,14 @@
       
       </div>
       <div class="modal-footer">
-          <button type="button" class="btn btn-primary" id="duyuruYapbtnOdevVer">@Resources.Resource.lblTamam</button>
-        <button type="button" class="btn btn-default" data-dismiss="modal">@Resources.Resource.lblIptal</button>
-        
+          <button type="button" class="btn btn-primary" id="duyuruYapbtnDuyuruYap">@Resources.Resource.lblTamam</button>
+          <button type="button" class="btn btn-default" data-dismiss="modal">@Resources.Resource.lblIptal</button>       
       </div>
     </div>
   </div>
 </div>}
-@section js
-{
-   <script src="@Href(string.Format("~/Panel/Js/Panel.Labels.{0}.js",dil))"></script>
-   <script src="@Href("~/Panel/Js/Default.min.js")"></script>
+@section js
+{
+   <script src="@Href(string.Format("~/Panel/Js/Panel.Labels.{0}.js",dil))"></script>
+   <script src="@Href("~/Panel/Js/Default.min.js")"></script>
 }
