--- a/Ajax/Odev/OdevVer.cshtml
+++ b/Ajax/Odev/OdevVer.cshtml
@@ -20,7 +20,10 @@
             Response.StatusCode=502;
             Response.End();  
     }
-
+    if (string.IsNullOrEmpty(Aciklama))
+    {
+        Aciklama="";
+    }
     if (!string.IsNullOrEmpty(Request["DosyaID"]))
     {
         DosyaID=Request["DosyaID"].AsInt();
@@ -47,7 +50,10 @@
    
     if (DosyaID!=-1)
     {
-         db.Execute("INSERT INTO DosyaIzinDers(DosyaID,DersID) VALUES(@0,@1)",DosyaID,DersID);
+        if (db.QueryValue("SELECT COUNT(*) FROM DosyaIzinDers WHERE DosyaID=@0 AND DersID=@1",DosyaID,DersID)<1)
+        {
+            db.Execute("INSERT INTO DosyaIzinDers(DosyaID,DersID) VALUES(@0,@1)",DosyaID,DersID);
+        }
     }
    
     db.Execute("INSERT INTO Aktivite(UserID,DersID,Renk,Ikon,URL,IlaveMetin,IliskiliOge,EylemID) VALUES(@0,@1,@2,@3,@4,@5,@6,@7)",WebSecurity.CurrentUserId,queryDers.DersID,"info","fa-clock-o",Href("~/Odev/Goster?OdevID=" + yeniOdevID),Baslik,"odvver" + yeniOdevID.ToString(),3);
